[package]
name = "rusty_journal"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"    # Add serde_json.
structopt = "0.3"

[dependencies.serde] # We're also going to need the serde feature for the chrono crate, so we can serialize the DateTime field.
version = "1.0"
features = ["derive"]  

[dependencies.chrono]
version = "0.4"
features = ["serde"]